# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter-tests-check.yml  linter.yml  pyci.yml
fixtures/: labels.json  statuses.json  tasklabelrelation.json  tasks.json  users.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: constants.py  custom_mixins.py  settings.py  urls.py  views.py
task_manager/labels/: constants.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: constants.py  forms.py  models.py  tests.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options.py
task_manager/tasks/: constants.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_options.py  0003_alter_task_executive_alter_task_status.py  0003_task_labels_alter_task_executive_alter_task_status.py  0003_tasklabelrelation_task_labels_alter_task_executive_and_more.py  0004_rename_labels_task_label.py  0004_tasklabelrelation_task_labels_tasklabelrelation_task.py  (+4 more)
task_manager/users/: constants.py  custom_mixins.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: base.html  delete.html  form.html  index.html  labels.html  statuses.html  task_view.html  tasks.html  users.html
templates/labels/: labels.html
templates/statuses/: statuses.html
templates/tasks/: tasks.html
templates/users/: users.html
(+2 files in other folders)
