[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Mariia Bilinska <mariiaklochko@gmail.com>"]
packages = [
  {include = "task-manager"},
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
